fix: make items overflow on tablet, check tests

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -49,7 +49,7 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: 60px;
+    margin-bottom: 61px;//60
   }
 
   @media (min-width: $desktop-width-min) {
@@ -118,9 +118,9 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 102px 19px 30px;
+    padding: 101px 19px 30px;
     width: 324px;
-    height: 340px;
+    min-height: 340px;
   }
 
   @media (min-width: $desktop-width-min) {
