--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -8,35 +8,18 @@
   }
 
   @media (min-width: $desktop-width-min) {
+    position: relative;
     padding: 145px 0 79px;
   }
 
-  .reviews__main-container {
-    margin: 0 auto;
-
-    @media (max-width: $mobile-width-max) {
-      width: calc($mobile-content-width + 20px);
-    }
-
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-      position: relative;
-      width: 768px;
-    }
-
-    @media (min-width: $desktop-width-min) {
-      position: relative;
-      width: 1440px;
-    }
-  }
-
-  .reviews__main-container::before {
+  &::before {
     @media (min-width: $desktop-width-min) {
       content: "";
       display: block;
       position: absolute;
       width: 100%;
       height: 100%;
-      top: 173px;
+      top: 318px;
       left: 0px;
       background-image:
         image-set(url("../../img/reviews/background/reviews-clouds-desktop@1x.webp") type("image/webp") 1x,
@@ -47,6 +30,24 @@
       background-size: 100%;
       z-index: -1;
     }
+  }
+}
+
+.reviews__main-container {
+  margin: 0 auto;
+
+  @media (max-width: $mobile-width-max) {
+    width: calc($mobile-content-width + 20px);
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    position: relative;
+    width: 768px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    position: relative;
+    width: 1440px;
   }
 }
 
